<resources>
    <string name="app_name">HaVagas</string>
    <string name="titulo">Há Vagas</string>
    <string name="nome_et">Nome</string>
    <string name="email_et">E-mail</string>
    <string name="receber_email">Deseja receber emails?</string>
    <string name="telefone_et">Número de telefone</string>
    <string name="comercial_rb">Comercial</string>
    <string name="residencial_rb">Residencial</string>
    <string name="celular_cb">Adicionar número de telefone móvel?</string>
    <string-array name="sexo_strArray">
        <item>Feminino</item>
        <item>Masculino</item>
        <item>Outro</item>
    </string-array>
    <string name="formacao_tv">Formação acadêmica</string>
    <string name="f_fundamental">Ensino fundamental completo</string>
    <string name="f_medio">Ensino médio completo</string>
    <string name="f_grad">Graduação completa</string>
    <string name="f_esp">Especialização</string>
    <string name="f_mest">Mestrado</string>
    <string name="f_dout">Doutorado</string>
</resources>