<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tituloTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nome_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_et"

        app:layout_constraintTop_toBottomOf="@id/tituloTV"
        />

    <LinearLayout
        android:id="@+id/email_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/nome_et">
        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:hint="@string/email_et"
            />
        <CheckBox
            android:id="@+id/email_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receber_email"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/telefone_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/email_ll">
        <EditText
            android:id="@+id/telefone_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="phone"
            android:text="@string/telefone_et"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comercial_rb"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/residencial_rb"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/celular_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/telefone_ll">
        <CheckBox
            android:id="@+id/celular_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/celular_cb"/>
        <EditText
            android:id="@+id/celular_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefone_et"
            android:visibility="invisible"
            />
    </LinearLayout>

    <Spinner
        android:id="@+id/sexo_sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/celular_ll"
        android:entries="@array/sexo_strArray"/>
    
    <TextView
        android:id="@+id/formacao_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/formacao_tv"
        android:textSize="20sp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintTop_toBottomOf="@id/sexo_sp"
        />

    <LinearLayout
        android:id="@+id/form_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/formacao_tv"
        >
        <CheckBox
            android:id="@+id/fundamental_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/f_fundamental"/>
        <EditText
            android:id="@+id/fundamental_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:visibility="visible"
            android:hint="Ano de formatura"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/form_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/form_layout_1"
        >
        <CheckBox
            android:id="@+id/medio_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/f_medio"/>
        <EditText
            android:id="@+id/medio_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:visibility="visible"
            android:hint="Ano de formatura"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/form_layout_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/form_layout_2"
        >
        <CheckBox
            android:id="@+id/grad_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/f_grad"/>
        <EditText
            android:id="@+id/grad_et_ano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:visibility="visible"
            android:hint="Ano de conclusão"/>
        <EditText
            android:id="@+id/grad_et_inst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:visibility="visible"
            android:hint="Instituição"/>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>